# rust

./: .gitignore  AUTOMATION_GUIDE.md  README.md  automation_config_example.json  package-lock.json  package.json
scripts/: rolex.txt
scripts/automation/: run.ts
scripts/types/: index.ts
tauri-app/: .env.development  .env.production  BUILD_GUIDE.md  README.md  index.html  package-lock.json  package.json  theme.ts  tsconfig.json  vite.config.ts
tauri-app/api/: rolex.ts
tauri-app/components/layout/: MainLayout.tsx
tauri-app/scripts/: check-env.js  run-prod.js  run-prod.ps1  switch-config.js  test-env.js
tauri-app/scripts/automation/: package.json
tauri-app/scripts/automation/test-results/: .last-run.json
tauri-app/src/: App.tsx  main.tsx  theme.ts
tauri-app/src-tauri/: Cargo.toml  tauri.conf.json  tauri.prod.conf.json
tauri-app/src-tauri/src/: automation.rs  lib.rs  main.rs
tauri-app/src/components/: EnvironmentInfo.tsx
tauri-app/src/components/layout/: ConfirmDialog.tsx  MainLayout.css  MainLayout.tsx  Toast.tsx  ToastProvider.tsx
tauri-app/src/hooks/: useToast.ts
tauri-app/src/pages/: Dashboard.tsx  Login.tsx  PasswordChangeDialog.tsx  Settings.tsx
tauri-app/src/utils/: environment-debug.ts
tauri-app/types/: index.ts
