[package]
name = "tauri-app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "tauri_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.2.0", features = [] }

[dependencies]
tauri = { version = "2.5.1", features = [] }
tauri-plugin-opener = "2.2.7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1", features = ["time", "rt-multi-thread", "macros"] } # rt-multi-thread 와 macros 추가
# headless_chrome = "1.0" # 제거
chromiumoxide = { version = "0.7.0", features = ["tokio-runtime"] } # chromiumoxide 추가
anyhow = "1.0" # chromiumoxide 예제에서 자주 사용됨
futures = "0.3" # chromiumoxide 예제에서 자주 사용됨
reqwest = { version = "0.12.18", features = ["json", "stream"] }
url = "2.5.4"
regex = "1.10"
